# rustfoil

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  public.key
.github/workflows/: build.yaml  release.yaml
rustfoil-cli/: Cargo.toml
rustfoil-cli/src/: main.rs
rustfoil-cli/src/cli/: model.rs
rustfoil-cli/src/enum/: compression.rs
rustfoil-lib/: Cargo.toml
rustfoil-lib/src/: lib.rs
rustfoil-lib/src/abstraction/: file.rs
rustfoil-lib/src/filter/: file.rs
rustfoil-lib/src/fs/: file.rs
rustfoil-lib/src/gdrive/: gdrive_api.rs  mod.rs  model.rs  service.rs
rustfoil-lib/src/http/: model.rs
rustfoil-lib/src/tinfoil/: auth.rs  encoding.rs  mod.rs  model.rs  service.rs
rustfoil-lib/src/tinfoil/compression/: compression.rs
rustfoil-lib/src/tinfoil/encryption/: encryption.rs
src/: compression.rs  encryption.rs  error.rs  gdrive.rs  index.rs  logging.rs  main.rs  tinfoil.rs  token.rs
