[package]
name = "rustfoil"
description = "Script that will allow you to generate an index file with Google Drive file links for use with Tinfoil"
version = "0.2.0"
authors = ["DevYukine <devyukine@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
google-drive3 = "1.0.14"
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "^0.10"
hyper-rustls = "^0.6"
serde_json = "^1.0"
yup-oauth2 = "^1.0"
console = "^0.13.0"
indicatif = "^0.15.0"
reqwest = "^0.10.8"
regex = "^1.4.1"
serde = { version = "^1.0", features = ["derive"] }
percent-encoding = "^2.1.0"
zstd = "^0.5.3"
flate2 = "^1.0.18"
anyhow = "^1.0"
thiserror = "^1.0"
openssl = { version = "^0.10", features = ["vendored"] }
openssl-probe = "^0.1.2"
rand = "^0.7.3"
aes = "^0.6.0"
block-modes = "^0.7.0"
rsa = "^0.3.0"
sha2 = "^0.9.1"
serde_with = "^1.5.1"
hhmmss = "0.1"
