[package]
name = "rustfoil"
description = "Script that will allow you to generate an index file with Google Drive file links for use with Tinfoil"
version = "0.4.2"
authors = ["DevYukine <devyukine@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "^0.3"
google-drive3 = "*"
hyper = "^0.14"
hyper-rustls = "^0.22"
serde_json = "^1.0"
yup-oauth2 = "^5.0"
console = "^0.14"
indicatif = "^0.15"
reqwest = { version = "^0.11", features=["rustls-tls"], default-features = false }
regex = "^1.4"
serde = { version = "^1.0", features = ["derive"] }
percent-encoding = "^2.1"
zstd = "^0.5"
flate2 = "^1.0"
anyhow = "^1.0"
thiserror = "^1.0"
rand = "^0.8"
aes = "^0.7"
block-modes = "^0.8"
rsa = "^0.4"
sha2 = "^0.9"
serde_with = "^1.9"
hhmmss = "0.1"
async-recursion = "^0.3"
tokio = { version = "^1.8", features = ["full"] }
