[package]
name = "rustfoil-cli"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfoil-lib = { path = "../rustfoil-lib" }
tokio = { version = "^1.34", features = ["full"] }
clap = { version = "^4", features = ["derive"] }
env_logger = "^0.10"
anyhow = "^1"
log = "0.4.20"
strum = { version = "0.25", features = ["derive"] }
hhmmss = "^0.1"